--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "DRK-MD",
+  "name": "MITZI-MD",
   "description": "DRK-MD Whatsapp Multidevice Bot",
   "logo": "https://i.ibb.co/ynpGMvp8/1160.jpg",
   "keywords": ["bot / Sula"],
