--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "name": "MITZI-MD",
   "description": "DRK-MD Whatsapp Multidevice Bot",
-  "logo": "https://i.ibb.co/ynpGMvp8/1160.jpg",
+  "logo": "https://i.ibb.co/LhX6KHW7/SulaMd.jpg",
   "keywords": ["bot / Sula"],
   "success_url": "/",
 
