--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@whiskeysockets/baileys": "6.6.0",
     "@adiwajshing/keyed-db": "^0.2.4",
     "@distube/ytdl-core": "^4.13.5",
+    "denethdev-ytmp3":"1.0.3",
+    "yt-search": "2.12.1",
     "pino": "^7.0.5",
     "pm2": "^5.2.0",
     "util": "^0.12.4",
